# mxcam

./: .gitignore  README.md  go.mod  go.sum  main.go  mxcam.code-workspace  pyproject.toml
internal/controller/: controller.go  go.mod  go.sum
internal/model/: go.mod  model.go
internal/view/: go.mod  view.go
mxcam/: __init__.py  controller.py  model.py  view.py
