[tool.poetry]
name = "mxcam"
version = "1.0.0"
description = ""
authors = ["Xavier Méndez <xmmendezy@gmail.com>"]

[tool.poetry.scripts]
main = "mxcam:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
sqlalchemy = "^1.3.19"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
